--- a/nitoronlinetestportal/static/package.json
+++ b/nitoronlinetestportal/static/package.json
@@ -15,6 +15,7 @@
     "antd": "^5.1.4",
     "axios": "^1.2.3",
     "dotenv-webpack": "^8.0.1",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.3.4",
